--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,9 @@ packages = [{include = "from_space_to_telegram"}]
 python = "^3.10"
 requests = "^2.28.1"
 
+[tool.poetry.scripts]
+space-telegram = "from_space_to_telegram.main:main"
+
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
 
