--- a/pyproject.toml
+++ b/pyproject.toml
@@ -9,6 +9,7 @@ packages = [{include = "from_space_to_telegram"}]
 [tool.poetry.dependencies]
 python = "^3.10"
 requests = "^2.28.1"
+python-dotenv = "^0.21.0"
 
 [tool.poetry.scripts]
 space-telegram = "from_space_to_telegram.main:main"
