--- a/pyproject.toml
+++ b/pyproject.toml
@@ -12,7 +12,8 @@ requests = "^2.28.1"
 python-dotenv = "^0.21.0"
 
 [tool.poetry.scripts]
-space-telegram = "from_space_to_telegram.main:main"
+space-telegram = "from_space_to_telegram.run_scripts:run_scripts"
+fetch-spacex-images = "from_space_to_telegram.scripts.fetch_spacex_images:main"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
