--- a/pyproject.toml
+++ b/pyproject.toml
@@ -14,6 +14,8 @@ python-dotenv = "^0.21.0"
 [tool.poetry.scripts]
 space-telegram = "from_space_to_telegram.run_scripts:run_scripts"
 fetch-spacex-images = "from_space_to_telegram.scripts.fetch_spacex_images:main"
+fetch-nasa-apod = "from_space_to_telegram.scripts.fetch_nasa_apod_images:main"
+fetch-nasa-epic = "from_space_to_telegram.scripts.fetch_nasa_epic_images:main"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
