--- a/pyproject.toml
+++ b/pyproject.toml
@@ -10,6 +10,7 @@ packages = [{include = "from_space_to_telegram"}]
 python = "^3.10"
 requests = "^2.28.1"
 python-dotenv = "^0.21.0"
+python-telegram-bot = "13.15"
 
 [tool.poetry.scripts]
 space-telegram = "from_space_to_telegram.run_scripts:run_scripts"
@@ -19,6 +20,7 @@ fetch-nasa-epic = "from_space_to_telegram.scripts.fetch_nasa_epic_images:main"
 
 [tool.poetry.group.dev.dependencies]
 flake8 = "^6.0.0"
+autopep8 = "^2.0.1"
 
 [build-system]
 requires = ["poetry-core"]
